objects/Event_Configuration__c.object
<CustomObject>
    <description>Configurations relating to Event including Badges and Themes</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Active indicates that this config can be select for new events.  Inactive configs may remain linked to exsiting events.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda_Logo__c</fullName>
        <label>Agenda Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Badge_Font_Family__c</fullName>
        <label>Badge Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Gutter__c</fullName>
        <inlineHelpText>The gutter margin between the two areas of a double sided badge</inlineHelpText>
        <label>Badge Gutter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_Optional__c</fullName>
        <label>Badge Optional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Title__c</fullName>
        <label>Badge Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Width__c</fullName>
        <inlineHelpText>The width of the printable area of the badge</inlineHelpText>
        <label>Badge Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_X__c</fullName>
        <inlineHelpText>The X co-ordinate of the top left of the printable area on the badge</inlineHelpText>
        <label>Badge X</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_Y__c</fullName>
        <inlineHelpText>The Y co-ordinate of the top left of the printable area on the badge</inlineHelpText>
        <label>Badge Y</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Page_Name__c</fullName>
        <label>Booking Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Page_URL__c</fullName>
        <formula>Event_Site_Root_URL__c + &quot;/&quot; +  Booking_Page_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if this is the default record for its record type</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Site_Root_URL__c</fullName>
        <label>Event Site Root URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Color__c</fullName>
        <label>Hyperlink Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Background_Color_Hover__c</fullName>
        <label>Primary Button Background Color - Hover</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Background_Color__c</fullName>
        <label>Primary Button Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Sample__c</fullName>
        <formula>IMAGE(&quot;https://dummyimage.com/150x30/&quot;+  SUBSTITUTE(Primary_Button_Background_Color__c, &quot;#&quot;, &quot;&quot;)   +&quot;/&quot;+  SUBSTITUTE(Primary_Button_Text_Color__c, &quot;#&quot;, &quot;&quot;)  +&quot;.png&amp;text=Button&quot;, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Button Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Text_Color_Hover__c</fullName>
        <label>Primary Button Text Color - Hover</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Text_Color__c</fullName>
        <label>Primary Button Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Logo_Sample__c</fullName>
        <formula>IMAGE( Primary_Logo__c, &quot;&lt;no logo&gt;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Logo Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Logo__c</fullName>
        <label>Primary Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RSVP_Accepted_Page_Name__c</fullName>
        <label>RSVP Accepted Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Declined_Page_Name__c</fullName>
        <label>RSVP Declined Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Landing_Page_Name__c</fullName>
        <label>RSVP Landing Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Page_URL__c</fullName>
        <formula>Event_Site_Root_URL__c + &quot;/&quot; +  RSVP_Landing_Page_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSVP Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Logo_Sample__c</fullName>
        <formula>IMAGE( Secondary_Logo__c , &quot;&lt;no logo&gt;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Logo Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Logo__c</fullName>
        <label>Secondary Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Cloudsmiths</fullName>
                </value>
                <value>
                    <fullName>SocialV2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Pages_Background_Color__c</fullName>
        <inlineHelpText>Hex Color Code eg. #000000 of #f0f0f0</inlineHelpText>
        <label>Web Pages Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Font_Color__c</fullName>
        <label>Web Pages Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Foreground_Color__c</fullName>
        <label>Web Pages Foreground Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Heading_Font_Color__c</fullName>
        <label>Web Pages Heading Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Heading_Sample__c</fullName>
        <formula>IMAGE(&quot;https://dummyimage.com/200x40/&quot;+  SUBSTITUTE(  Web_Pages_Foreground_Color__c , &quot;#&quot;, &quot;&quot;)   +&quot;/&quot;+  SUBSTITUTE( Web_Pages_Heading_Font_Color__c , &quot;#&quot;, &quot;&quot;)  +&quot;.png&amp;text=SAMPLE HEADING&quot;, &quot;invalid parameters&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Pages Heading Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Privacy_Policy__c</fullName>
        <label>Website_Privacy Policy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Default__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Configurations</pluralLabel>
    <recordTypes>
        <fullName>Event_Agenda</fullName>
        <active>true</active>
        <label>Event Agenda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Badges</fullName>
        <active>true</active>
        <description>Badges Associated to the Event -  Do not change Label as it is used in evTestDataGenerator</description>
        <label>Event Badges</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Basics</fullName>
        <active>true</active>
        <description>Basics Associated to the Event</description>
        <label>Event Basics</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Config</fullName>
        <active>true</active>
        <description>Technical event configuration parameters</description>
        <label>Event Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Disclaimer</fullName>
        <active>true</active>
        <label>Event Disclaimer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Themes</fullName>
        <active>true</active>
        <description>Themes Associated to the Event</description>
        <label>Event Themes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>